2004-05-03  Mike Kestner  <mkestner@ximian.com>

	* configure.in : add some checks for gtkhtml-3.1 and use it if avail.
	* gtkhtml/gtkhtml-sharp.dll.config.in : deal with 3.1 versioning.

2004-05-03  Miguel de Icaza  <miguel@ximian.com>

	* gtkhtml/Gtk.metadata: Patch from Mike Kestner: make
	GtkHTMLStream opaque, to fix a bug that was found by running
	Monodoc on MacOS X.  We were passing a pointer to a managed
	object, instead of a pointer to a HTMLStream-allocated object.

	* HTMLStream.custom: Update custom file to reflect change to
	Opaque: use Handle instead of this.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* gdk/glue/makefile.win32 : remove windowmanager.o for now. It
	was breaking the build on win32.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* configure.in : lookup gacutil and error out if not found.
	* */Makefile.am : add install-data-local and uninstall-local targets
	for GAC installation.  Add gtk-sharp.pub target to cp the key in for
	distcheck.
	* */AssemblyInfo.cs.in : remove ../ from key path for VPATH build.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* configure.in : remove BASE_DEPENDENCIES LIBS and CFLAGS and
	expose more specific versions for glue building.
	* */glue/Makefile.am : use more specific versions of LIBS and CFLAGS
	to reduce the ldd footprint.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* configure.in : AC_SUBST an API_VERSION=1.0.0.0 for the 
	AssemblyVersionAttributes.
	* */AssemblyInfo.cs.in : s/@VERSION@/@API_VERSION@/

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* */AssemblyInfo.cs.in : s/@VERSION@.0.0/@VERSION@/

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* sample/gconf/* : break System.Drawing dependency.

2004-04-30  Owen Fraser-Green  <owen@discobabe.net>

	* gconf/tools/gconfsharp-schemagen.in : fixed variables
	* sources/Makefile.am : remove reference to old gst target

2004-04-30  Erik Dasque  <edasque@ximian.com>

	* gtk/Calendar.custom : new Date property with setter
