@@ -1,3 +1,4 @@
+PACKAGE=@PACKAGE@
 prefix=@prefix@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
@@ -6,4 +7,4 @@ libdir=${exec_prefix}/lib
 Name: GConf#
 Description: GConf# - GConf .NET Binding
 Version: @VERSION@
-Libs: -lib:${libdir} -r:gconf-sharp -r:gconf-sharp-peditors
+Libs: -lib:${libdir}/mono/$(PACKAGE) -r:gconf-sharp -r:gconf-sharp-peditors
