@@ -1,3 +1,4 @@
+PACKAGE=@PACKAGE@
 prefix=@prefix@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
@@ -6,4 +7,4 @@ libdir=${exec_prefix}/lib
 Name: Gnome#
 Description: Gnome# - GNOME .NET Binding
 Version: @VERSION@
-Libs: -lib:${libdir} -r:gnome-sharp
+Libs: -lib:${libdir}/mono/$(PACKAGE) -r:gnome-sharp
