@@ -1,5 +1,10 @@
 2004-05-03  Mike Kestner  <mkestner@ximian.com>
 
+	* */Makefile.am : fix gacutil for new package switch
+	* */*.pc.in : fix -libs var for new dll path
+
+2004-05-03  Mike Kestner  <mkestner@ximian.com>
+
 	* configure.in : add some checks for gtkhtml-3.1 and use it if avail.
 	* gtkhtml/gtkhtml-sharp.dll.config.in : deal with 3.1 versioning.
 
